# libmp-example

./: .gitignore  CMakeLists.txt  README.md  libprotobuf.cmake  main.cpp
